# app/Http/Controllers/Auth/LoginController.php
@@ -8,11 +8,35 @@ use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Attributes as OA;
 use Symfony\Component\HttpFoundation\Response;
 
 class LoginController extends Controller
 {
-    public function __invoke(Request $request)
+    #[OA\Post(
+        path: "api/login",
+        summary: "Login",
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\MediaType(
+                mediaType: "application/json",
+                schema: new OA\Schema(
+                    required: ["email", "password"],
+                    properties: [
+                        new OA\Property(property: "email", description: "User e-mail", type: "string", example: "example@example"),
+                        new OA\Property(property: "password", description: "User password", type: "string", example: "password"),
+                    ]
+                )
+            )
+        ),
+        tags: ["Auth"],
+        responses: [
+            new OA\Response(response: Response::HTTP_OK, description: "OK"),
+            new OA\Response(response: Response::HTTP_UNAUTHORIZED, description: "Unauthorized"),
+            new OA\Response(response: Response::HTTP_UNPROCESSABLE_ENTITY, description: "Unprocessable Entity"),
+        ]
+    )]
+    public function __invoke(Request $request): JsonResponse
     {
         try {
             $validator = Validator::make($request->all(), [
