# app/Http/Controllers/Auth/RegisterController.php
@@ -7,10 +7,35 @@ use App\Models\User;
 use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Validator;
+use OpenApi\Attributes as OA;
 use Symfony\Component\HttpFoundation\Response;
 
 class RegisterController extends Controller
 {
+    #[OA\Post(
+        path: "api/register",
+        summary: "Register",
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\MediaType(
+                mediaType: "application/json",
+                schema: new OA\Schema(
+                    required: ["name", "email", "password", "password_confirmation"],
+                    properties: [
+                        new OA\Property(property: "name", description: "User name", type: "string", example: "Test User"),
+                        new OA\Property(property: "email", description: "User e-mail", type: "string", example: "example@example"),
+                        new OA\Property(property: "password", description: "User password", type: "string", example: "password"),
+                        new OA\Property(property: "password_confirmation", description: "User password confirmation", type: "string", example: "password"),
+                    ]
+                )
+            )
+        ),
+        tags: ["Auth"],
+        responses: [
+            new OA\Response(response: Response::HTTP_CREATED, description: "Created"),
+            new OA\Response(response: Response::HTTP_UNPROCESSABLE_ENTITY, description: "Unprocessable Entity"),
+        ]
+    )]
     public function __invoke(Request $request)
     {
         try {
